# 591_sale_crawler_on_google_sheet

./: .env  docker_compose.yml  dockerfile  house_data.db  main.py  pyproject.toml  readme.md  requirements.txt
